ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration1/input.ts.stderr
error[1038]: `declare` modifier not allowed for code already in an ambient context
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration1/input.ts:2:3
  |
2 |   declare function F();
  |   ^^^^^^^

